--- a/package.json
+++ b/package.json
@@ -1,13 +1,38 @@
 {
-    "name": "duplicate-finder",
-    "version": "1.0.0",
-    "main": "main.js",
-    "scripts": {
-      "start": "electron ."
+  "name": "duplicate-finder",
+  "version": "1.0.0",
+  "description": "A simple duplicate file scanner with deletion and preview",
+  "author": {
+    "name": "littletree71"
+  },
+  "main": "main.js",
+  "scripts": {
+    "start": "electron .",
+    "build": "electron-builder --win --x64",
+    "build:ico": "png-to-ico icon.png > icon.ico"
+  },
+  "build": {
+    "appId": "com.littletree71.duplicatefinder",
+    "productName": "Duplicate Finder",
+    "files": [
+      "**/*"
+    ],
+    "directories": {
+      "output": "dist"
     },
-    "dependencies": {},
-    "devDependencies": {
-      "electron": "^28.0.0"
-    }
+    "win": {
+      "target": ["nsis", "portable"],
+      "icon": "icon.ico"
+    },
+    "mac": {
+      "target": []
+    },
+    "publish": null,
+    "asar": true
+  },
+  "devDependencies": {
+    "electron": "^28.0.0",
+    "electron-builder": "^24.13.3",
+    "png-to-ico": "^2.1.8"
   }
-  
+}
