--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     tags:
-      - "v*" # 當推送符合 v* 格式的 Tag 時觸發
+      - "v*"
 
 jobs:
   release:
@@ -19,7 +19,6 @@ jobs:
       - run: npm install
       - run: npm run build --if-present
 
-      # 創建 Release
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -31,11 +30,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # 上傳構建資產
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/win-unpacked # 替換為構建輸出的路徑
+          asset_path: ./dist/win-unpacked
           asset_name: duplicate-finder-${{ github.ref_name }}.zip
           asset_content_type: application/zip
